comments from Profs Group and Murphy

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1775,3 +1775,36 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       SLACcitation   = "%%CITATION = ARXIV:1209.6215;%%",
 }
 
+@article{BarlowBeeston,
+      author         = "Roger Barlow and Christine Beeston",
+      title          = "{Fitting using finite Monte Carlo samples}",
+      journal        = "Computer Physics Communications",
+      volume         = "77",
+      pages          = "219-228",
+      year           = "1993",
+      SLACcitation   = "%%CITATION = INSPIRE-599622;%%",
+}
+
+@Unpublished{BarlowBeeston2,
+     author    = "J. S. Conway",
+     title     = "{Incorporating Nuisance Parameters in Likelihoods for Multisource Spectra}",
+     eprint    = "1103.0354",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-ex",
+     year = "2011",
+     SLACcitation  = "%%CITATION = 1012.4031;%%"
+}
+
+@article{CDFandD0:2011aa,
+      key            = "920558",
+      title          = "{Combined CDF and D0 Upper Limits on Standard Model Higgs
+                        Boson Production with up to 8.6 fb$^{-1}$ of Data}",
+      collaboration  = "TEVNPH (Tevatron New Phenomina and Higgs Working Group),
+                        CDF, D0",
+      year           = "2011",
+      eprint         = "1107.5518",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-CONF-11-354-E",
+      SLACcitation   = "%%CITATION = ARXIV:1107.5518;%%",
+}
