comments from Profs Group and Murphy

--- a/introduction.tex
+++ b/introduction.tex
@@ -30,7 +30,7 @@ within current experimental precision.  Such models include Little Higgs models,
 respectively.  The Higgs may to decay to $b$-quark, $W$, $Z$, $\tau$, or $\gamma$ pairs.  In fact, this is one of the only production modes at the \acrshort{lhc} which 
 has access to every Higgs decay mode, as other production mechanisms are swamped by large backgrounds preventing measurements of all Higgs decay types.  
 
-\par The search is performed with the \acrshort{cms} experiment, a modern, general purpose particle detector capable of reconstructing and identifying hadronic jets, photons, electrons, muons, and tau leptons.  The hermetic design, and it's high precision and efficiency in reconstructing and tracking every particle in a $pp$ collision, also makes it suitable for reconstructing missing transverse energy from the calculated momentum imbalance of all of the measured particles in the event.  This missing transverse energy is often the signature of a neutrino, which is the only \acrshort{sm} particle capable of escaping detection.  The detector uses a 3.8 T axial magnetic field, produced by the solenoid it is named after, to bend charged particles as they travel through the detector.  The measured curvature of their tracks allows the momentum of the particles to be calculated with to a high precision.  Tracks are formed and particles are reconstructed by a combination of sub-detector systems which work together to form the final final reconstructed image of each particle in the collision.  
+\par The search is performed with the \acrshort{cms} experiment, a modern, general purpose particle detector capable of reconstructing and identifying hadronic jets, photons, electrons, muons, and tau leptons.  The hermetic design, and it's high precision and efficiency in reconstructing and tracking every particle in a $pp$ collision, also makes it suitable for reconstructing missing transverse energy from the calculated momentum imbalance of all of the measured particles in the event.  This missing transverse energy is often the signature of a neutrino, which is the only \acrshort{sm} particle capable of escaping detection.  The detector uses a 3.8 T axial magnetic field, produced by the solenoid it is named after, to bend charged particles as they travel through the detector.  The measured curvature of their tracks allows the momentum of the particles to be calculated with a high precision.  Tracks are formed and particles are reconstructed by a combination of sub-detector systems which work together to form the final final reconstructed image of each particle in the collision.  
 
 \begin{figure}[h]
    \centering
