comments from Profs Group and Murphy

--- a/lhc_description.tex
+++ b/lhc_description.tex
@@ -46,7 +46,7 @@ is as follows:
   are two beams.  The mechanism of achieving such high energies is
   based in Radio-Frequency (RF) cavity technology, which clusters the
   protons together into packets, which are all accelerated and
-  collided together.  For the LHC, $N_{b} = 1.15 x 10^{11}$.
+  collided together.  For the LHC, $N_{b} = 1.15 \times 10^{11}$.
 \item $n_{b}$ - Number of bunches per beam.  The maximum design for
   the LHC allows for $n_{b} = 2808$ bunches, however in practice,
   lower number of bunches have been run with in order to create more
@@ -71,7 +71,7 @@ is as follows:
 \end{itemize}
 
 \noindent The LHC is designed to deliver a maximum luminosity of L =
-10$^{34}$cm$^{2}$s$^{1}$ to the CMS and ATLAS experiments, with a
+10$^{34}$cm$^{-2}$s$^{-1}$ to the CMS and ATLAS experiments, with a
 maximum center-of-mass energy of $\sqrt{s}=14\TeV$.  
 
 
@@ -536,7 +536,7 @@ passes through the low-field region, so the trajectory is unaffected
 by the high-field region, which bends the injection beam towards the
 synchrotron aligning it horizontally, with the target beam.  The
 kicker magnet, is a fast-pulsed magnet and provides the timing
-selection in order to make a final bend vertical bend into the
+selection in order to make a final vertical bend into the
 synchrotron orbit, and into the correct basket of the synchrotron bunch 
 train~\cite{LHC:LHC_kickers_Barnes}.  Finally, bumper magnets make
 small bends to the beam and align it with the injection site.  Figure
@@ -654,7 +654,7 @@ shows an exaggerated view of the 2812 m radius curvature of each
 dipole. However, since each dipole is only $\sim14$ m in length, this
 curvature is hardly noticeable, as shown in a photo of an actual
 dipole magnet in a staging area at CERN, awaiting installation in
-figure \ref{fig:lhc_diple}(\subref{fig:lhc_dipole_staging}).   
+figure \ref{fig:lhc_dipole}(\subref{fig:lhc_dipole_staging}).   
 
 \begin{figure}{h}
     \centering
@@ -721,9 +721,9 @@ corrections to the beam shape are made with the multipole magnets,
 since they are able to compress the beam from more than two axes.
 Figure \ref{fig:lhc_multipole}(\subref{fig:lhc_multipole_field})
 shows the fields lines of a sextupole and  octupole magnet.  A typical
-cell of magnets, 110 m long, in the LHC optimizes is shown in a diagram
+cell of magnets, 110 m long, in the LHC octant is shown in a diagram
 in figure \ref{fig:lhc_multipole}(\subref{fig:lhc_magnetic_cell}), where the dipole, 
-quadrupole and higher order magnet work in series to confine the
+quadrupole and higher order magnets work in series to confine the
 protons to the LHC ring.  Finally, a set of single bore magnets, known
 as an inner triplet, bring the two beams together into an interaction
 region.  Figure
@@ -782,7 +782,7 @@ ring. Figure \ref{fig:lhc_rf}(\subref{fig:lhc_rf_staged}) shows an
 actual four cavity module in a staging area prior to installation.  In
 this picture, the resonance cavities are concealed underneath the
 cylindrical housing of the vacuum tank and cryostat.  Figure
-\ref{fig:lhc_rf}(\subref{fig:lhc_rf_installed}) is a picture of the
+\ref{fig:lhc_rf}(\subref{fig:lhc_rf_at_p4}) is a picture of the
 module installed at Point 4.  The thin cylindrical structures
 extending off the top is the LHe intake valve and quench system.  The
 thicker cylindrical structures are the waveguides that couple the
@@ -847,15 +847,15 @@ klystrons, it also utilizes a multi-bunching chamber design.
 \par The LHC is the largest cryogenic system in the
 world~\cite{LHC:LHC_lhc_cryogen_cernWebsite}, as its operating
 temperature is 1.8 K, in order to produce the high-magnetic fields
-needed by the dipole magnets.  Additionally, the acceleration,
-mechanism, the RF cavities, are also superconducting, and must be
+needed by the dipole magnets.  Additionally, the acceleration
+mechanism, the RF cavities, are also superconducting, and must be 
 cooled to 4.5 K.  Over 120 tons of Helium are used as the cryogenic
 medium, since once it is cooled below 2.17 K, it becomes a superfluid,
 a phase of matter with a high thermal conductivity, making it ideal
 for refrigeration.  Cryogenic and auxiliary equipment are
-concentrated into 5 \"cryogenic islands\" at Points 1,2,4,6, and
+concentrated into 5 "cryogenic islands" at Points 1,2,4,6, and
 8~\cite{lhc:machine_description}.  As shown in figure
-\ref{fig:lhc_cryogenic_islands}, Point 4,6, and 8 house two facilities
+\ref{fig:lhc_cryogenic_islands}, Points 4,6, and 8 house two facilities
 each, making a total of eight, one for each octant of the LHC arc. 
 
 \begin{figure}{h}
@@ -881,7 +881,7 @@ brought to 4.5 K with refrigerators recovered from the LEP experiment
 \cite{LHC:LHC_cool_challenge}.  The He gas is first compressed and allowed
 to expand, where it is cooled by losing energy through mechanical
 turbo-expanders that run at up to 140,000 rpm on helium-gas
-bearings.  Figure
+bearings, as shown in figure
 \ref{fig:lhc_cryo_4p5}(\subref{fig:lhc_cryo_4p5_compressor}).  The He
 is then liquified after passing through a vacuum sealed box containing
 heat exchangers and more turbo-expanders
