comments from Profs Group and Murphy

--- a/signatures.tex
+++ b/signatures.tex
@@ -17,9 +17,9 @@
     \vskip -0.2in
     \signrule
     \raggedright\begin{tabular}{l}Committee Member: Prof. Edward Murphy\end{tabular}\par
-    \vskip -0.2in
-    \signrule
-    \raggedright\begin{tabular}{l}Committee Member: Prof. Bradley Cox\end{tabular}\par
+    %\vskip -0.2in
+    %\signrule
+    %\raggedright\begin{tabular}{l}Committee Member: Prof. Bradley Cox\end{tabular}\par
     %\raggedright\begin{tabular}{l}Committee Member: Prof. Bradley Cox\end{tabular}\par
     \vskip 0.75in
     \signrule
