updated Prof Neu's comments

--- a/abstract.tex
+++ b/abstract.tex
@@ -4,5 +4,5 @@
 
 \end{center}
 
-\par The most important goal of the \acrfull{lhc} is to elucidate the mechanism of electroweak symmetry breaking.  The \acrfull{sm} Higgs boson is thought to be a prime candidate for this.  The newly discovered boson announced on July 4th, 2012, with a mass of ${\sim}125$~\GeVcc, has so far been shown to be consistent with a \acrshort{sm} Higgs.  However, the final confirmation of this new particle as the \acrshort{sm} Higgs depends on subsequent measurements of all of its properties.  The observation of this new particle in association with top-quark pairs would allow the couplings of this particle to top and bottom quarks to be directly measured. ~\ttH with Higgs decaying to~\bbbar is an excellent channel to explore due to the dominant branching ratio of Higgs to~\bbbar and  the kinematic handle the~\ttbar system offers on the event.  However, it presents a plethora of difficult challenges due to a low signal to background ratio and uncertainties on kinematically similar \acrshort{sm} backgrounds.  This work discusses the search for Higgs boson production in association with a top-quark pair in~\pp collisions at $\sqrt{s}$ = 8~\TeV, collected by the \acrfull{cms} experiment at the \acrshort{lhc}.  The search has been performed and published in two stages.  The first analysis used the first 5.1 \fbinv, and was followed up by the second analysis with the full 2012 dataset, using a total integrated luminosity of 19.5 \fbinv.      
+\par The most important goal of the \acrfull{lhc} is to elucidate the mechanism of electroweak symmetry breaking.  The Higgs mechanism is thought to be a prime candidate for this, which consequently predicts the existence of an additional particle, the \acrfull{sm} Higgs boson.  The newly discovered boson announced on July 4th, 2012, with a mass of ${\sim}125$~\GeVcc, has so far been shown to be consistent with a \acrshort{sm} Higgs boson.  However, the final confirmation of this new particle as the \acrshort{sm} Higgs depends on subsequent measurements of all of its properties.  The observation of this new particle in association with top-quark pairs would allow the couplings of this particle to top and bottom quarks to be directly measured. ~\ttH with Higgs decaying to~\bbbar is an excellent channel to explore due to the dominant branching ratio of Higgs to~\bbbar and  the kinematic handle the~\ttbar system offers on the event.  However, it presents a plethora of difficult challenges due to a low signal to background ratio and uncertainties on kinematically similar \acrshort{sm} backgrounds.  This work discusses the search for Higgs boson production in association with a top-quark pair in~\pp collisions at $\sqrt{s}$ = 8~\TeV, collected by the \acrfull{cms} experiment at the \acrshort{lhc}.  The search has been performed and published in two stages.  The first analysis used the first 5.1 \fbinv, and was followed up by the second analysis with the full 2012 dataset, using a total integrated luminosity of 19.5 \fbinv.      
 
